--- a/index.html
+++ b/index.html
@@ -18,38 +18,49 @@
 
 <body>
   <a id='top'></a>
+  <div class="buffer"></div>
   <header>
-    <div class='logo'>
-      <a href='index.html'>SCSS Learning</a>
-    </div>
-    <div class='nav' id='nav'>
-      <ul>
-        <li><a href='#'>Home</a></li>
-        <li><a href='#'>About</a></li>
-        <li><a href='#'>Note</a></li>
-        <li><a href='#'>Gallery</a></li>
-        <li><a href='#'>Contact</a></li>
-      </ul>
-    </div>
-    <div class='hamburger'>
-      <i class='fas fa-bars'></i>
-      <i class='fas fa-times'></i>
+    <div class="container">
+      <div class='logo'>
+        <a href='index.html'><span>Scss</span> Learning</a>
+      </div>
+      <div class='nav' id='nav'>
+        <ul>
+          <li><a href='#'>Home</a></li>
+          <li><a href='#'>About</a></li>
+          <li><a href='#'>Note</a></li>
+          <li><a href='#'>Gallery</a></li>
+          <li><a href='#'>Contact</a></li>
+        </ul>
+      </div>
+      <div class='hamburger'>
+        <i class='fas fa-bars'></i>
+        <i class='fas fa-times'></i>
+      </div>
     </div>
   </header>
   <!-- Main Body -->
-  <div class="page-title">
-    Learning SCSS
-  </div>
-  <div class="video-wrapper">
-    <div class="video-title">
-      SCSS Crash Course by Brad Travesy
+  <main>
+    <div class="page-title">
+      Embed Video
     </div>
-    <div class="video">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/nu5mdN2JIwM" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+    <div class="video-wrapper">
+      <div>
+        <div class="video-title">
+          SCSS Crash Course by Brad Travesy
+        </div>
+        <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/nu5mdN2JIwM" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+      </div>
     </div>
-  </div>
+  </main>
+  <!-- Footer -->
+  <footer>
+    <p><small>Copyright &copy; Royce Nguyen 2020</small></p>
+  </footer>
   <!-- End Body -->
   <script src='js/main.js'></script>
 </body>
