--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
         <a href='index.html'><span>Scss</span> Learning</a>
       </div>
       <div class='nav' id='nav'>
-        <ul>
-          <li><a href='#'>Home</a></li>
-          <li><a href='#'>About</a></li>
-          <li><a href='#'>Note</a></li>
-          <li><a href='#'>Gallery</a></li>
-          <li><a href='#'>Contact</a></li>
-        </ul>
+        <div>
+          <div>
+            <ul>
+              <li><a href='#'>Home</a></li>
+              <li><a href='#'>About</a></li>
+              <li><a href='#'>Note</a></li>
+              <li><a href='#'>Gallery</a></li>
+              <li><a href='#'>Contact</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class='hamburger'>
         <i class='fas fa-bars'></i>
